@@ -134,7 +134,7 @@ class Extension:
     def __repr__(self):
         return '<%s.%s(%r) at %#x>' % (
             self.__class__.__module__,
-            self.__class__.__name__,
+            self.__class__.__qualname__,
             self.name,
             id(self))
 
